--- a/main.cfg
+++ b/main.cfg
@@ -1,10 +1,20 @@
 /**
  * @brief Environment parameters
  */
-track_len = 2.; ///< Track length (half of the length of the track)
+track_len = 25.; ///< Track length (half of the length of the track)
 stddev = 0.; ///< Environment noise standard deviation
 failure_probability = .1; ///< Probability with chich the oposite action effect is applied (randomness of the transition function)
 init_s = 0.; ///< Initial state
+
+/**
+ * @brief Generative model parameters
+ *
+ * @Warning do not forget to modify the model when you do so with the
+ * environment.
+ */
+model_track_len = 25.; ///< Model track length (half of the length of the track)
+model_stddev = 0.; ///< Model noise standard deviation
+model_failure_probability = .1; ///< Probability with chich the oposite action effect is applied in the model (randomness of the transition function)
 
 /**
  * @brief Policy parameters
@@ -17,15 +27,9 @@ reuse = false; ///< Set to true if the policy is able to reuse the tree
 nb_actions = 2; ///< Number of actions
 a0 = -1; ///< action 1
 a1 = 1; ///< action 2
-budget = 20; ///< Algorithm budget (number of expanded nodes)
-horizon = 10; ///< Algorithm horizon for the default policy
+budget = 100; ///< Algorithm budget (number of expanded nodes)
+horizon = 40; ///< Algorithm horizon for the default policy
 uct_cst = 2.; ///< UCT constant factor
 discount_factor = .9; ///< Discount factor for the MDP
-epsilon = 0.; ///< Epsilon for the epsilon-optimal default policy (0. means always optimal - 1. means always random)
+epsilon = 0.; ///< Epsilon for the epsilon-optimal default policy (0. means always optimal, 1. means always random)
 
-/**
- * @brief Generative model parameters
- */
-model_track_len = 2.; ///< Model track length (half of the length of the track)
-model_stddev = 0.; ///< Model noise standard deviation
-model_failure_probability = .1; ///< Probability with chich the oposite action effect is applied in the model (randomness of the transition function)
