--- a/main.cfg
+++ b/main.cfg
@@ -23,7 +23,7 @@ model_failure_probability = .1; ///< Probability with chich the oposite action e
  * as done in this configuration file (a0 = ?; a1 = ?; etc.). The action space will have the
  * form {a0, a1, ..., a{nb_actions-1}}.
  */
-reuse = false; ///< Set to true if the policy is able to reuse the tree
+policy_selector = 0; ///< Policy selector (0: vanilla UCT; 1: plain OLUCT; default: epsilon-optimal policy)
 nb_actions = 2; ///< Number of actions
 a0 = -1; ///< action 1
 a1 = 1; ///< action 2
