--- a/main.cfg
+++ b/main.cfg
@@ -22,8 +22,13 @@ model_failure_probability = .1; ///< Probability with chich the oposite action e
  * Note for the action space definition: first define the number of actions, then each actions
  * as done in this configuration file (a0 = ?; a1 = ?; etc.). The action space will have the
  * form {a0, a1, ..., a{nb_actions-1}}.
+ * @param {unsigned] policy_selector; can take the following values:
+ * 0: vanilla UCT;
+ * 1: plain OLUCT
+ * 2: state multimodality test OLUCT
+ * default: epsilon-optimal policy
  */
-policy_selector = 0; ///< Policy selector (0: vanilla UCT; 1: plain OLUCT; default: epsilon-optimal policy)
+policy_selector = 0;
 nb_actions = 2; ///< Number of actions
 a0 = -1; ///< action 1
 a1 = 1; ///< action 2
