Configuration file cleaned

--- a/main.cfg
+++ b/main.cfg
@@ -19,9 +19,9 @@ model_failure_probability = .1; ///< Probability with chich the oposite action e
 /**
  * @brief Policy parameters
  *
- * Note for the action space definition: first define the number of actions, then each actions
- * as done in this configuration file (a0 = ?; a1 = ?; etc.). The action space will have the
- * form {a0, a1, ..., a{nb_actions-1}}.
+ * Note for the action space definition: first define the number of actions,
+ * then each actions as done in this configuration file (a0 = ?; a1 = ?; etc.).
+ * The action space will have the form {a0, a1, ..., a{nb_actions-1}}.
  * @param {unsigned] policy_selector; can take the following values:
  * 0: vanilla UCT;
  * 1: plain OLUCT
