Code generaly updated and more decision criterion implemented

--- a/main.cfg
+++ b/main.cfg
@@ -24,7 +24,7 @@ model_failure_probability = .1; ///< Probability with chich the oposite action e
  * The action space will have the form {a0, a1, ..., a{nb_actions-1}}.
  * @param {unsigned] policy_selector; can take the following values:
  * 0: vanilla UCT;
- * 1: plain OLUCT
+ * 1: OLUCT
  * 2: state multimodality test OLUCT
  * default: epsilon-optimal policy
  */
@@ -37,4 +37,15 @@ horizon = 10; ///< Algorithm horizon for the default policy
 uct_cst = 2.; ///< UCT constant factor
 discount_factor = .9; ///< Discount factor for the MDP
 epsilon = 0.; ///< Epsilon for the epsilon-optimal default policy (0. means always optimal, 1. means always random)
+
+/**
+ * OLUCT parameters
+ * The values of the b<i>'s is an on/off boolean for the activation of a
+ * particular decision criterion.
+ */
+b0 = true; ///< plain (default)
+b1 = false; ///< state multi-modality test
+b2 = false; ///< state distribution vmr test
+b3 = false; ///< distance to state distribution test (Mahalanobis distance)
+b4 = true; ///< outcome distribution variance test
 
