--- a/main.cfg
+++ b/main.cfg
@@ -28,7 +28,7 @@ model_failure_probability = .1; ///< Probability with chich the oposite action e
  * 2: state multimodality test OLUCT
  * default: epsilon-optimal policy
  */
-policy_selector = 0;
+policy_selector = 1;
 nb_actions = 2; ///< Number of actions
 a0 = -1; ///< action 1
 a1 = 1; ///< action 2
@@ -45,7 +45,10 @@ epsilon = 0.; ///< Epsilon for the epsilon-optimal default policy (0. means alwa
  */
 b0 = true; ///< plain (default)
 b1 = false; ///< state multi-modality test
-b2 = false; ///< state distribution vmr test
+b2 = false; ///< state distribution variance test
 b3 = false; ///< distance to state distribution test (Mahalanobis distance)
 b4 = true; ///< outcome distribution variance test
+state_variance_threshold = .05; ///< Upper threshold for state distribution vmr test
+distance_threshold = 1.; ///< Upper threshold for state distribution distance test
+outcome_variance_threshold = .1; ///< Upper threshold for outcome distribution variance test
 
