Test parameters for OLUCT updated

--- a/main.cfg
+++ b/main.cfg
@@ -44,9 +44,9 @@ epsilon = 0.; ///< Epsilon for the epsilon-optimal default policy (0. means alwa
  * particular decision criterion.
  */
 b0 = true; ///< plain (default)
-b1 = false; ///< state multi-modality test
-b2 = false; ///< state distribution variance test
-b3 = false; ///< distance to state distribution test (Mahalanobis distance)
+b1 = true; ///< state multi-modality test
+b2 = true; ///< state distribution variance test
+b3 = true; ///< distance to state distribution test (Mahalanobis distance)
 b4 = true; ///< outcome distribution variance test
 state_variance_threshold = .05; ///< Upper threshold for state distribution vmr test
 distance_threshold = 1.; ///< Upper threshold for state distribution distance test
