--- a/main.cfg
+++ b/main.cfg
@@ -2,9 +2,9 @@
  * @brief Environment parameters
  */
 init_s = 0.; ///< Initial state
-track_len = 25.; ///< Track length (half of the length of the track)
-stddev = 0.; ///< Environment noise standard deviation
-failure_probability = .1; ///< Probability with chich the oposite action effect is applied (randomness of the transition function)
+track_len = 2.; ///< Track length (half of the length of the track)
+stddev = .0; ///< Environment noise standard deviation
+failure_probability = 0.; ///< Probability with chich the oposite action effect is applied (randomness of the transition function)
 
 /**
  * @brief Generative model parameters
@@ -12,9 +12,9 @@ failure_probability = .1; ///< Probability with chich the oposite action effect 
  * @Warning do not forget to modify the model when you do so with the
  * environment.
  */
-model_track_len = 25.; ///< Model track length (half of the length of the track)
-model_stddev = 0.; ///< Model noise standard deviation
-model_failure_probability = .1; ///< Probability with chich the oposite action effect is applied in the model (randomness of the transition function)
+model_track_len = 2.; ///< Model track length (half of the length of the track)
+model_stddev = .0; ///< Model noise standard deviation
+model_failure_probability = 0.; ///< Probability with chich the oposite action effect is applied in the model (randomness of the transition function)
 
 /**
  * @brief Policy parameters
@@ -25,17 +25,16 @@ model_failure_probability = .1; ///< Probability with chich the oposite action e
  * @param {unsigned] policy_selector; can take the following values:
  * 0: vanilla UCT;
  * 1: OLUCT
- * 2: state multimodality test OLUCT
  * default: epsilon-optimal policy
  */
-policy_selector = 0;
+policy_selector = 1;
 nb_actions = 2; ///< Number of actions
 a0 = -1; ///< action 1
 a1 = 1; ///< action 2
 budget = 100; ///< Algorithm budget (number of expanded nodes)
-horizon = 100; ///< Algorithm horizon for the default policy
+horizon = 50; ///< Algorithm horizon for the default policy
 uct_cst = 2.; ///< UCT constant factor
-discount_factor = .99; ///< Discount factor for the MDP
+discount_factor = .9; ///< Discount factor for the MDP
 epsilon = 0.; ///< Epsilon for the epsilon-optimal default policy (0. means always optimal, 1. means always random)
 
 /**
@@ -44,11 +43,11 @@ epsilon = 0.; ///< Epsilon for the epsilon-optimal default policy (0. means alwa
  * particular decision criterion.
  */
 b0 = true; ///< plain (default)
-b1 = false; ///< state multi-modality test
+b1 = false; ///< state multi-modality test -> only useful for discrete mode
 b2 = false; ///< state distribution variance test
 b3 = false; ///< distance to state distribution test (Mahalanobis distance)
 b4 = false; ///< outcome distribution variance test
-state_variance_threshold = .05; ///< Upper threshold for state distribution vmr test
+state_variance_threshold = .5; ///< Upper threshold for state distribution vmr test
 distance_threshold = 1.; ///< Upper threshold for state distribution distance test
 outcome_variance_threshold = .1; ///< Upper threshold for outcome distribution variance test
 
