--- a/main.cfg
+++ b/main.cfg
@@ -46,8 +46,8 @@ b0 = true; ///< plain (default)
 b1 = false; ///< state multi-modality test -> only useful for discrete mode
 b2 = false; ///< state distribution variance test
 b3 = false; ///< distance to state distribution test (Mahalanobis distance)
-b4 = false; ///< outcome distribution variance test
-state_variance_threshold = .5; ///< Upper threshold for state distribution vmr test
+b4 = false; ///< return distribution variance test
+state_variance_threshold = .4; ///< Upper threshold for state distribution vmr test
 distance_threshold = 1.; ///< Upper threshold for state distribution distance test
-outcome_variance_threshold = .1; ///< Upper threshold for outcome distribution variance test
+outcome_variance_threshold = .9; ///< Upper threshold for outcome distribution variance test
 
