--- a/main.cfg
+++ b/main.cfg
@@ -2,9 +2,9 @@
  * @brief Environment parameters
  */
 init_s = 0.; ///< Initial state
-track_len = 2.; ///< Track length (half of the length of the track)
-stddev = .0; ///< Environment noise standard deviation
-failure_probability = 0.; ///< Probability with chich the oposite action effect is applied (randomness of the transition function)
+track_len = 25.; ///< Track length (half of the length of the track)
+stddev = .1; ///< Environment noise standard deviation
+failure_probability = .1; ///< Probability with chich the oposite action effect is applied (randomness of the transition function)
 
 /**
  * @brief Generative model parameters
@@ -12,9 +12,9 @@ failure_probability = 0.; ///< Probability with chich the oposite action effect 
  * @Warning do not forget to modify the model when you do so with the
  * environment.
  */
-model_track_len = 2.; ///< Model track length (half of the length of the track)
-model_stddev = .0; ///< Model noise standard deviation
-model_failure_probability = 0.; ///< Probability with chich the oposite action effect is applied in the model (randomness of the transition function)
+model_track_len = 25.; ///< Model track length (half of the length of the track)
+model_stddev = .1; ///< Model noise standard deviation
+model_failure_probability = .1; ///< Probability with chich the oposite action effect is applied in the model (randomness of the transition function)
 
 /**
  * @brief Policy parameters
@@ -33,7 +33,7 @@ a0 = -1; ///< action 1
 a1 = 1; ///< action 2
 budget = 100; ///< Algorithm budget (number of expanded nodes)
 horizon = 50; ///< Algorithm horizon for the default policy
-uct_cst = 2.; ///< UCT constant factor
+uct_cst = .7; ///< UCT constant factor
 discount_factor = .9; ///< Discount factor for the MDP
 epsilon = 0.; ///< Epsilon for the epsilon-optimal default policy (0. means always optimal, 1. means always random)
 
@@ -49,5 +49,5 @@ b3 = false; ///< distance to state distribution test (Mahalanobis distance)
 b4 = false; ///< return distribution variance test
 state_variance_threshold = .4; ///< Upper threshold for state distribution vmr test
 distance_threshold = 1.; ///< Upper threshold for state distribution distance test
-outcome_variance_threshold = .9; ///< Upper threshold for outcome distribution variance test
+outcome_variance_threshold = .0005; ///< Upper threshold for outcome distribution variance test
 
